fix: Decrease global spacing and remove underline decoration

--- a/src/App.scss
+++ b/src/App.scss
@@ -40,7 +40,6 @@ body {
     font-family: 'Cabin Sketch';
     font-weight: 100;
     font-size: 2em;
-    text-decoration: underline;
   }
 
   h1, h2, h3, h4, h5 {
