--- a/src/components/section/section-style.scss
+++ b/src/components/section/section-style.scss
@@ -1,9 +1,9 @@
 @import "../../style/colors.scss";
 
 // Vertical space between sections
-$vertical-space: 12vh;
+$vertical-space: 10vh;
 // Vertical space between section title and content
-$vspace-inside: 8vh;
+$vspace-inside: 5vh;
 
 section {
   margin-top: $vertical-space;
